--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <li><a href="">HIRE ME</a></li>
     </ul>
 </nav>
+
 <div class="info">
     <h1>I <span> AM</span> SOUROV</h1>
-    <P>I study in computer Engeneering <br> At Shyamoli Ideal Polytechnic institute</P>
-    <a href="">Download CV</a>
+    <P>I currently working as a marketing agent in <a href="https://www.aponhut.com/" target="_blank">aponhut.com</a> <br> I study in computer Engeneering <br> At Shyamoli Ideal Polytechnic institute</P>
+    <a href="https://drive.google.com/file/d/1J5N5TerryLK7rK1gkoFYeGIieocEkiMR/view?usp=sharing" target="_blank">Download CV</a>
 </div>
 <div class="img-box">
     <img src="pattern.png" class="back-img">
